# python-project-52

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml  test_ci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: form.html  index.html  list.html  nav.html
task_manager/templates/labels/: delete.html  list.html
task_manager/templates/statuses/: list.html
task_manager/templates/tasks/: delete.html  list.html  show.html
task_manager/templates/users/: delete.html  list.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
