[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["DaniilIslamgaliev <dante9226@mail.ru>"]
readme = "README.md"
packages = [
{include = "task_manager"}
]

[tool.poetry.dependencies]
python = "^3.11.9"
Django = "^5.1.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
