[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["DaniilIslamgaliev <dante9226@mail.ru>"]
readme = "README.md"
packages = [
{include = "task_manager"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = "^5.1.3"
gunicorn = "^23.0.0"
django-bootstrap5 = "^24.3"
whitenoise = "^6.8.2"
dj-database-url = "^2.3.0"
rollbar = "^0.16.3"
django-filter = "^24.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
coverage = "^7.6.8"
faker = "^32.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
